--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
             <li><a href="#" class="renovation">RENOVATION</a></li>
             <li><a href="#" class="contact">CONTACT</a></ll>
         </ul>
-        <img src="/images/title.png" class="title">
+        <img src="images/title.png" class="title">
     </nav>
     <div class="cover">
         <div class="intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum tempore dignissimos omnis accusamus, sed quae, similique, iure possimus animi exercitationem quidem necessitatibus facere rem. Pariatur nostrum iste eos laboriosam cupiditate.</div>
     </div>
     <div class="featured-container">
-        <div class="box zone"><img src="/images/mid-century-modern (10).jpg" alt=""></div>
-        <div class="box zone"><img src="/images/mid-century-modern (10).jpg" alt=""></div>
-        <div class="box zone"><img src="/images/mid-century-modern (10).jpg" alt=""></div>
-        <div class="box zone"><img src="/images/mid-century-modern (10).jpg" alt=""></div>
-        <div class="box zone"><img src="/images/mid-century-modern (10).jpg" alt=""></div>
-        <div class="box zone"><img src="/images/mid-century-modern (10).jpg" alt=""></div>
-        <div class="box zone"><img src="/images/mid-century-modern (10).jpg" alt=""></div>
-        <div class="box zone"><img src="/images/mid-century-modern (10).jpg" alt=""></div>
-        <div class="box zone"><img src="/images/mid-century-modern (10).jpg" alt=""></div>
+        <div class="box zone"><img src="images/mid-century-modern (10).jpg" alt=""></div>
+        <div class="box zone"><img src="images/mid-century-modern (10).jpg" alt=""></div>
+        <div class="box zone"><img src="images/mid-century-modern (10).jpg" alt=""></div>
+        <div class="box zone"><img src="images/mid-century-modern (10).jpg" alt=""></div>
+        <div class="box zone"><img src="images/mid-century-modern (10).jpg" alt=""></div>
+        <div class="box zone"><img src="images/mid-century-modern (10).jpg" alt=""></div>
+        <div class="box zone"><img src="images/mid-century-modern (10).jpg" alt=""></div>
+        <div class="box zone"><img src="images/mid-century-modern (10).jpg" alt=""></div>
+        <div class="box zone"><img src="images/mid-century-modern (10).jpg" alt=""></div>
     </div>
     <footer class="footer">footer</footer>
     <!-- Script -->
